validación de formulario enoturismo reserva

--- a/Cava Dorada/enoturismo/index.html
+++ b/Cava Dorada/enoturismo/index.html
@@ -280,13 +280,13 @@
 
   <div class="datos">
 <label for="name">Nombre Completo</label>
-<input type="text" id="name" name="name" placeholder="Tu nombre completo" required>
+<input type="text" id="name" name="name" placeholder="Tu nombre completo" required minlength="6"><br>
 
 <label for="email">Email</label>
 <input type="email" id="email" name="email" placeholder="Tu dirección de email" required>
 
 <label for="telefono">Teléfono</label>
-<input type="tel" id="telefono" name="telefono" placeholder="Teléfono" required />
+<input type="tel" id="telefono" name="telefono" placeholder="Teléfono" required maxlength="10"/>
 
 <label for="cantidad">Visitantes</label>
 <input type="number" id="cantidad" name="cantidad" placeholder="0"required>
@@ -317,10 +317,10 @@
 <label for=""></label>
 <textarea name="" id="" cols="" rows="5" placeholder="¿Quieres dejar un comentario en referencia a tu visita?"></textarea>
 </div>
-
+ <p id="mensaje_login"></p>
 </div>
       <div class="boton-reserva">
-    <button type="submit" id="submit" name="submit" class="btn btn-dark btn-lg active" role="button" aria-pressed="true">Reservar</button>
+    <button type="submit" onclick="return validarDatos()" id="submit" name="submit" class="btn btn-dark btn-lg active" role="button" aria-pressed="true">Reservar</button>
   </div>
 </form>
 
