--- a/Cava Dorada/enoturismo/index.html
+++ b/Cava Dorada/enoturismo/index.html
@@ -45,8 +45,11 @@
             </li>
           </ul>
           <form class="d-flex">
-            <a href="#" class="user">
+            <a href="../login/loginISPC/" class="user">
               <i class="fas fa-user px-3 "></i>
+            </a>
+            <a href="../carrito" class="cart">
+              <i class="fas fa-cart-shopping px-3"></i>
             </a>
           </form>
         </div>
